SEC-2289: Add spring4Test